CREATE TABLE Users (
   UserID INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
   Username VARCHAR(255) NOT NULL,
   Email VARCHAR(255) UNIQUE NOT NULL,
   UserFullName VARCHAR(50) DEFAULT '',
   UserBio VARCHAR(255) DEFAULT '',
   PasswordHash VARCHAR(255) NOT NULL,
   CreatedAt TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
   UpdatedAt TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
   UserRole VARCHAR(100) DEFAULT 'user'
);

CREATE TABLE PlayerStatistics (
   StatID INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
   UserID INTEGER NOT NULL,
   Wins INTEGER DEFAULT 0,
   Losses INTEGER DEFAULT 0,
   Draws INTEGER DEFAULT 0,
   WinRate DECIMAL(5, 2) DEFAULT 0,
   CurrentStreak INTEGER DEFAULT 0,
   EloRating DECIMAL DEFAULT 1000,
   LastUpdated TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
   FOREIGN KEY (UserID) REFERENCES Users(UserID) ON DELETE CASCADE
);

CREATE TABLE PaymentMethods (
   PaymentMethodID INTEGER PRIMARY KEY,
   UserID INTEGER NOT NULL,
   PaymentType VARCHAR(255),
   TokenizedInfo VARCHAR(400),
   CreatedAt TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
   FOREIGN KEY (UserID) REFERENCES Users(UserID) ON DELETE CASCADE
);

CREATE TABLE Wallets (
   WalletID INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
   UserID INTEGER NOT NULL,
   Balance DECIMAL(6, 2) DEFAULT 0,
   PendingBalance DECIMAL(6, 2) DEFAULT 0,
   CreatedAt TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
   UpdatedAt TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
   FOREIGN KEY (UserID) REFERENCES Users(UserID) ON DELETE CASCADE
);

CREATE TABLE GameTypes (
   GameTypeID INTEGER PRIMARY KEY,
   GameName VARCHAR(40) NOT NULL,
   GameDescription VARCHAR(400),
   Config VARCHAR(500)
);

CREATE SEQUENCE MATCHES_MATCHID_SEQ
 START WITH 1
 INCREMENT BY 1
 NOCACHE
 NOCYCLE;

CREATE TABLE Matches (
   MatchID INTEGER PRIMARY KEY,
   GameTypeID INTEGER NOT NULL,
   PlayerOneID INTEGER NOT NULL,
   PlayerTwoID INTEGER NOT NULL,
   EntryFee NUMBER(10,2),
   MatchState VARCHAR(40),
   WinnerID INTEGER,
   StartTime TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
   EndTime TIMESTAMP,
   LobbyUUID VARCHAR2(36) UNIQUE NOT NULL,
   Score VARCHAR(500),
   FOREIGN KEY (GameTypeID) REFERENCES GameTypes(GameTypeID),
   FOREIGN KEY (PlayerOneID) REFERENCES Users(UserID),
   FOREIGN KEY (PlayerTwoID) REFERENCES Users(UserID),
   FOREIGN KEY (WinnerID) REFERENCES Users(UserID)
);

CREATE TABLE GameMoves (
   LogID INTEGER PRIMARY KEY,
   MatchID INTEGER NOT NULL,
   PlayerID INTEGER NOT NULL,
   MoveDetails VARCHAR(4000),
   TimestampGM TIMESTAMP,
   FOREIGN KEY (MatchID) REFERENCES Matches(MatchID),
   FOREIGN KEY (PlayerID) REFERENCES Users(UserID)
);

CREATE TABLE Transactions (
   TransactionID INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
   UserID INTEGER NOT NULL,
   Amount NUMBER(10, 2),
   TransactionType VARCHAR(40),
   Status VARCHAR(40),
   TransactionTimestamp TIMESTAMP,
   Remarks VARCHAR(400),
   FOREIGN KEY (UserID) REFERENCES Users(UserID)
);

CREATE TABLE BalanceState (
   BalanceStateID INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
   UserID INTEGER NOT NULL,
   Operation NUMBER(10, 2),
   FinalBalance NUMBER(6, 2),
   BalanceStateTimestamp TIMESTAMP,
   FOREIGN KEY (UserID) REFERENCES Users(UserID)
);

CREATE TABLE GAME_TYPE_DAILY_SUMMARY (
    SummaryID                   NUMBER(10) NOT NULL,
    GameTypeID                  NUMBER(10) NOT NULL,
    SummaryDate                 DATE NOT NULL,
    MatchesPlayedCount          NUMBER(10) DEFAULT 0 NOT NULL,
    UniquePlayerCount           NUMBER(10) DEFAULT 0 NOT NULL,
    TotalEntryFeesCollected     NUMBER(18, 2) DEFAULT 0.00 NOT NULL,
    TotalPayoutsMade            NUMBER(18, 2) DEFAULT 0.00 NOT NULL,
    AverageMatchDurationSeconds NUMBER(10),
    CONSTRAINT PK_GAME_TYPE_DAILY_SUMMARY PRIMARY KEY (SummaryID)
);

CREATE TABLE PLATFORM_DAILY_SUMMARY (
    SummaryDate                 DATE NOT NULL,
    NewUsersCount               NUMBER(10) DEFAULT 0 NOT NULL,
    ActiveUsersCount            NUMBER(10) DEFAULT 0 NOT NULL,
    TotalMatchesPlayed          NUMBER(10) DEFAULT 0 NOT NULL,
    TotalTransactionVolume      NUMBER(18, 2) DEFAULT 0.00 NOT NULL,
    NetRevenue                  NUMBER(18, 2) DEFAULT 0.00 NOT NULL,
    CONSTRAINT PK_PLATFORM_DAILY_SUMMARY PRIMARY KEY (SummaryDate)
);

CREATE TABLE USER_LOGIN_LOG (
    LoginLogID                  NUMBER(10) NOT NULL,
    UserID                      NUMBER(10) NOT NULL,
    LoginTimestamp              TIMESTAMP NOT NULL,
    LogoutTimestamp             TIMESTAMP NULL,
    IPAddress                   VARCHAR2(45 CHAR),
    UserAgent                   VARCHAR2(1000 CHAR),
    SessionDurationSeconds      NUMBER(10) NULL,
    CONSTRAINT PK_USER_LOGIN_LOG PRIMARY KEY (LoginLogID)
);